2009-10-15  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Eric Seidel.

        [Gtk][Layout tests] Generate results for dom tests
        https://bugs.webkit.org/show_bug.cgi?id=29893

        Add results for dom tests and enable these tests in the Skipped.

        * platform/gtk/Skipped:
        * platform/gtk/dom/xhtml/level3/core/canonicalform08-expected.txt: Copied from LayoutTests/platform/mac/dom/xhtml/level3/core/canonicalform08-expected.txt.
        * platform/gtk/dom/xhtml/level3/core/canonicalform09-expected.txt: Copied from LayoutTests/platform/mac/dom/xhtml/level3/core/canonicalform09-expected.txt.
        * platform/gtk/dom/xhtml/level3/core/documentgetinputencoding03-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/entitygetinputencoding02-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/entitygetxmlversion02-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/nodegetbaseuri05-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/nodegetbaseuri07-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/nodegetbaseuri09-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/nodegetbaseuri10-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/nodegetbaseuri11-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/nodegetbaseuri15-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/nodegetbaseuri17-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/nodegetbaseuri18-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/nodelookupnamespaceuri01-expected.txt: Added.
        * platform/gtk/dom/xhtml/level3/core/nodelookupprefix19-expected.txt: Added.

2009-10-15  Daniel Bates  <dbates@webkit.org>

        Reviewed by Adam Roben.

        https://bugs.webkit.org/show_bug.cgi?id=24731
        And
        rdar://problem/5015961
        
        Tests that DHTML drag-and-drop works correctly.
        