@@ -1,3 +1,15 @@
+2009-10-15  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Timothy Hatcher.
+
+        Web Inspector: Prevent subsequent tests from failing upon inspector
+        test timeout.
+
+        https://bugs.webkit.org/show_bug.cgi?id=30404
+
+        * inspector/evaluate-in-frontend.js:
+        (onload.setTimeout):
+
 2009-10-15  Zan Dobersek  <zandobersek@gmail.com>
 
         Reviewed by Eric Seidel.
